# minimap

./: .rusty-hook.toml  Cargo.toml
.github/: dependabot.yml
.github/workflows/: test-core.yml
minimap-app/: .taurignore  Cargo.toml  gulpfile.mjs  package.json  tauri.conf.json
minimap-app/script/: enumerate-i18n.mjs  esbuild-consts.mjs  esbuild-css-modules.mjs  esbuild-sucrase.mjs  esbuild-surplus.mjs  hash-filename.mjs  i18n-to-json.mjs  list-themes.mjs  preprocessor.mjs  tsv.mjs
minimap-app/src/: main.rs
minimap-app/www-src/: i18n.tsv  index.html  package.json
minimap-app/www-src/js/: api.mjs  global.css  index.mjs  reset.css  theme.css
minimap-app/www-src/js/component/: Button.css  Button.mjs  Form.mjs  Icon.css  Icon.mjs  Input.css  Input.mjs  Logo.css  Logo.mjs  Slider.css  Slider.mjs  Spacer.css  Spacer.mjs
minimap-app/www-src/js/module/: ErrorView.css  ErrorView.mjs  Loading.css  Loading.mjs  Root.css  Root.mjs  WorkspaceSelect.css  WorkspaceSelect.mjs
minimap-app/www-src/js/util/: anti-pinch.mjs  autoscroll.mjs  backslash.mjs  css.mjs  debounce.mjs  disable.mjs  editable.mjs  enum.mjs  filter.mjs  i18n-id.mjs  i18n.mjs  make-promise.mjs  now.mjs  on-resize.mjs  prevent.mjs  router.mjs  s-cache.mjs  s-event.mjs  s-theme.mjs  sig.mjs  tauri-config-signal.mjs  unique-class.mjs  zip.mjs  zoom-pan.mjs
minimap-cli/: Cargo.toml
minimap-cli/src/: main.rs
minimap-core/: Cargo.toml
minimap-core/src/: acceptance-tests.inc.rs  deps.rs  lib.rs  playground.rs  remote.rs
minimap-core/src/remote/: git.rs  memory.rs
minimap-core/src/workspace/: git.rs  memory.rs
