[package]
name = "minimap-app"
version = { workspace = true }
description = "Minimap GUI app"
edition = "2021"
rust-version = "1.60"
publish = false

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
minimap-core = { path = "../minimap-core" }
slotmap = "1.0.7"
thiserror = "1.0.50"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
