[package]
name = "minimap-app"
version = { workspace = true }
description = "Minimap GUI app"
edition = "2021"
rust-version = "1.60"
publish = false

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
minimap-core.workspace = true
slotmap = "1.0.7"
thiserror = "1.0.55"
base64 = "0.21.5"
paste = "1.0.14"
dirs = "5.0.1"
toml = "0.8.8"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
