[package]
name = "minimap-core"
version = { workspace = true }
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "minimap-playground"
path = "src/playground.rs"

[dependencies]
git2 = "0.18.1"
sha2 = "0.10.8"
hex = "0.4.3"
thiserror = "1.0.50"

[dev-dependencies]
rusty-hook = "0.11.2"
