[package]
name = "minimap-core"
version = { workspace = true }
edition = "2021"
publish = false

[features]
default = ["git"]
git = ["dep:git2"]

[dependencies]
sha2 = "0.10.8"
thiserror = "1.0.50"
git2 = { version = "0.18.1", optional = true }
indexmap = "2.1.0"

[dev-dependencies]
rusty-hook = "0.11.2"
